# jaxzin-infra-bootstrap

./: .envrc  .gitignore  CONTRIBUTING.md  DR_RECOVERY_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  ansible.cfg  bootstrap-runner.sh  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.gitea/workflows/: deploy.yml  molecule.yml  network.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bootstrap.yml  build-runner.yml  common-bootstrap.yml  devcontainer-build.yml  health-check.yml  mirror-health.yml  network.yml  restore.yml  secret-scan.yml  test.yml
docs/architecture/: tailscale-sidecar-modes.md
docs/plans/: 2026-02-23-regression-tests-design.md  2026-05-10-gitea-deploy-keys-stub-plan.md  2026-05-10-gitea-lan-ssh-bind-plan.md  2026-05-10-unifi-static-dns-design.md  2026-05-10-unifi-static-dns-plan.md  2026-05-15-runner-image-dns-tools.md  2026-05-15-tailscale-authkey-failfast.md  2026-06-17-bootstrap-consume-tailscale-sidecar-collection.md  2026-06-18-tailscale-sidecar-collection-migration.md  2026-07-17-gitea-k8s-migration-design.md
docs/runbooks/: gitea-runner-host.md  gitea-stack-reconcile.md  job-container-tailnet-ssh.md  tailscale-authkey-rotation.md
playbooks/: galaxy-requirements.yml  gitea-deploy.yml  gitea-restore.yml  seed-runner-ssh.yml
scripts/: install-plugins.sh  install-runner.sh  install-superpowers.sh
tests/: check_docker_tasks.py  reconcile_selftest.sh  test-regression.yml
(+103 files in other folders)
